--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,84 +1,48 @@
-@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two');
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title>Daniela Alvarez</title>
+	<!--core first + styles last-->
+  
 
-* {
-	margin:0;
-	padding:0:;
-}
-
-body {
-	background-color: #e6e6e6;
-	max-width: 100%;
-	font-family: 'Shadows Into Light Two', cursive;
-
-
-}
-div{
-	width:600px
-	height:200px;
-	margin: 20px auto;
-}
-#logo {
-	display: block; /*for the img inside your div */  
-	margin-left: auto; 
-	margin-right: auto;
-	padding-top: 30px;
-
-}
-
-h1 {
-		border:6px solid #f1afea;
-		border-style: double dashed double dashed;
-    	width: 600px;
-		margin: 20px auto;
-		text-align: center;
-		padding: 30px;
-		font-family: 'Shadows Into Light Two', cursive;
-}
-.colorchange{
-	color:#ff8080;
-}
-
-h2 {
-	margin: 10px;
-}
-
-h3{ 
-		color: #ff9b99; 
-		font-style: italic;
-		margin: 20px;
-}
-
-#sketch{
-	border: none;
-	width: 100vw;
-	height: 50vh
-}
-
-#overwrite{
-	color:;
-}
-ul {
-	background-color: #f5abda;
-	/*margin-top: 100px;*/
-	font-size: 18px;
-	width: 100%;
-	height:60px;
-	line-height: 60px;
+	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
+</head>
+<body>
+	<div><img src="https://www.shareicon.net/data/128x128/2016/09/02/824472_peace_512x512.png" id="logo"></div>
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="portfolio.html">Portfolio</a></li>
 	
-}
-ul li {
-	float: left;
-	list-style-type: none;
-	padding-right: 100px;
-	/* background-color: pink; */
+	</ul>
+	<h1 class="colorchange">Hi, Im Daniela !</h1>
 
-}
-ul li a {
-	color:white;
-	text-decoration: none;
+	<h2 class="colorchange">This is my portfolio</h2>
 
-}
-ul li a:hover {
-	color:grey;
-	font-weight: bold;
-}
+	<h3>This is a sketch</h3>
+	<iframe src="sketch.html" id="sketch"></iframe>
+	<p class="colorchange">This is some description about my work</p>
+
+	<h3>This is an image</h3>
+	<img src="images/littlekids.jpg">
+	<p class="colorchange" id="overwrite">This is some description about my work.</p>
+
+	<video width="640" height="480" controls="">
+	<source src="media/animation.mp4" type="video/mp4">
+	</video>
+
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/GSXosc0JquA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+	<iframe src="https://player.vimeo.com/video/258498657?loop=1" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<p><a href="https://vimeo.com/258498657">Feel The Sounds of Kenya</a> from <a href="https://vimeo.com/ceeroo">Cee-Roo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+	<a href="http://sallysbakingaddiction.com/2017/02/02/chocolate-lava-cakes/print/">link to my favorite recipe</a>
+	<a href="page1.html">This link goes to page 2.</a>
+
+
+	<a href="https://www.pinterest.com/pin/307089268315956776/">Link to my pinterest</a>
+	<a href="page1.html"><This link goes to page 2</a>
+</body>
+</html>
+
